Compile on java 21